--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 .calculator-display {
 	width: calc(var(--calculator-size) - 2 * var(--calculator-padding));
-	height: 75px;
+	min-height: 80px;
 	line-height: 75px; /* Center text vertically */
 	text-align: end;
 	background-color: white;
@@ -36,6 +36,7 @@ body {
 	border-radius: 5px;
 	font-size: 3rem;
 	padding: 0 .5rem;
+	word-wrap: break-word;
 }
 
 .calc-buttons {
@@ -43,7 +44,7 @@ body {
 	display: grid;
 	grid-gap: 10px;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(5, 1fr);
+	grid-template-rows: repeat(6, 1fr);
 	margin-top: 20px;
 }
 
@@ -71,9 +72,18 @@ body {
 	grid-row: 1 / 2;
 }
 
+.equal {
+	grid-column: 1 / 5;
+	grid-row: 6 / 7;
+}
+
 /* Media Queries */
 @media (max-width: 500px), (max-height: 500px) {
 	:root {
 		--calculator-size: 300px;
+	}
+
+	.calculator-display {
+		font-size: 2rem;
 	}
 }
