--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 :root {
 	--calculator-size: 400px;
-	--calculator-padding: calc(var(--calculator-size) / 20);
 }
 
 body {
@@ -19,68 +18,118 @@ body {
 
 .calculator {
 	width: var(--calculator-size);
-	background-color: lightgray;
-	border: 2px solid black;
-	border-radius: 20px;
+	border: 2px solid #000;
 	margin: 100px auto;
-	padding: var(--calculator-padding);
 }
 
 .calculator-display {
-	width: calc(var(--calculator-size) - 2 * var(--calculator-padding));
+	width: calc(var(--calculator-size) - 4px);
 	min-height: 80px;
 	line-height: 75px; /* Center text vertically */
+	word-wrap: break-word;
 	text-align: end;
-	background-color: white;
-	border: 2px solid black;
-	border-radius: 5px;
+	color: #fdfefe;
+	background-color: #223850;
 	font-size: 3rem;
 	padding: 0 .5rem;
-	word-wrap: break-word;
 }
 
 .calc-buttons {
-	width: calc(var(--calculator-size) - 2 * var(--calculator-padding));
+	width: calc(var(--calculator-size) - 4px);
 	display: grid;
-	grid-gap: 10px;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(6, 1fr);
-	margin-top: 20px;
+	grid-template-rows: repeat(5, 1fr);
 }
 
 .btn {
-	background-color: white;
-	border: 2px solid black;
-	border-radius: 5px;
-	padding: calc(var(--calculator-size) / 20) calc(var(--calculator-size) / 15);
-	font-size: 1.25rem;
+	border: none;
+	outline: none;
+	padding: 2rem;
+	font-size: 1.5rem;
 	cursor: pointer;
+	transition: all 0.2s ease-in;
 }
 
-.btn:hover,
-.btn:active {
-	background-color: #eee;
+.btn.number,
+.btn.dot,
+.btn.toggle-neg-pos {
+	background-color: #223850;
+	color: #6885a7;
+}
+
+.btn.number:hover,
+.btn.number:active,
+.btn.dot:hover,
+.btn.dot:active,
+.btn.toggle-neg-pos:hover,
+.btn.toggle-neg-pos:active {
+	background-color: #223b55;
+}
+
+.btn.clear,
+.btn.delete,
+.btn.operator,
+.btn.equal {
+	background-color: #233b55;
+	color: #fdfefe;
+	font-weight: bold;
+}
+
+.btn.clear:hover,
+.btn.clear:active,
+.btn.delete:hover,
+.btn.delete:active,
+.btn.operator:hover,
+.btn.operator:active,
+.btn.equal:hover,
+.btn.equal:active {
+	background-color: rgb(27, 47, 68);
 }
 
 .clear {
-	grid-column: 1 / 3;
+	grid-column: 1 / 2;
 	grid-row: 1 / 2;
 }
 
 .delete {
-	grid-column: 3 / 5;
+	grid-column: 2 / 3;
 	grid-row: 1 / 2;
 }
 
 .equal {
-	grid-column: 1 / 5;
-	grid-row: 6 / 7;
+	grid-column: 4 / 5;
+	grid-row: 4 / 6;
+	font-size: 2.5rem;
+}
+
+#operator-add {
+	grid-column: 4 / 5;
+	grid-row: 3 / 4;
+}
+
+#operator-substract {
+	grid-column: 4 / 5;
+	grid-row: 2 / 3;
+}
+
+#operator-multiply {
+	grid-column: 4 / 5;
+	grid-row: 1 / 2;
+}
+
+#operator-divide {
+	grid-column: 3 / 4;
+	grid-row: 1 / 2;
 }
 
 /* Media Queries */
 @media (max-width: 500px), (max-height: 500px) {
 	:root {
 		--calculator-size: 300px;
+	}
+
+	.btn {
+		padding: 1rem;
 	}
 
 	.calculator-display {
